[gd_scene load_steps=20 format=3 uid="uid://b0nxcfky4wja6"]

[ext_resource type="Script" path="res://levels/level_base.gd" id="1_58ikm"]
[ext_resource type="Texture2D" uid="uid://cf0u6k0bce1jl" path="res://assets/environment/back.png" id="2_7n2a6"]
[ext_resource type="Texture2D" uid="uid://1rmy1wlx62gg" path="res://assets/environment/tileset.png" id="2_f8lrl"]
[ext_resource type="Texture2D" uid="uid://d3jquox1ygya6" path="res://assets/environment/middle.png" id="3_kpngl"]
[ext_resource type="Texture2D" uid="uid://vch28mqo37ox" path="res://assets/environment/props.png" id="3_pgtnn"]
[ext_resource type="Texture2D" uid="uid://prxhg57rxlk8" path="res://assets/cherry_spawn.png" id="4_763a0"]
[ext_resource type="Texture2D" uid="uid://dd3bewrpxa8u3" path="res://assets/gem_spawn.png" id="5_udy2u"]
[ext_resource type="PackedScene" uid="uid://cmehtb8553kx3" path="res://player/player.tscn" id="6_ovct1"]
[ext_resource type="PackedScene" uid="uid://b2dagip6jh7i4" path="res://UI/hud.tscn" id="7_tn277"]
[ext_resource type="AudioStream" uid="uid://b5wba5bspp84k" path="res://assets/audio/GrasslandsTheme.ogg" id="10_taw8n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_juwd7"]
texture = ExtResource("2_f8lrl")
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:7/0 = 0
15:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:7/0 = 0
17:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
17:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:7/0 = 0
19:7/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
19:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:9/0 = 0
17:9/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:9/0 = 0
19:9/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
19:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:10/0 = 0
10:10/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:10/0 = 0
11:10/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:11/0 = 0
15:11/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:11/0 = 0
17:11/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
17:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:11/0 = 0
19:11/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
19:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:13/0 = 0
13:13/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
13:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:14/0 = 0
15:14/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:14/0 = 0
17:14/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
17:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:14/0 = 0
19:14/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
19:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:15/0 = 0
1:15/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:15/0 = 0
2:15/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
2:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:15/0 = 0
4:15/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
4:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:15/0 = 0
5:15/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
5:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:16/0 = 0
2:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
2:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:16/0 = 0
4:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
4:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:16/0 = 0
11:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:16/0 = 0
14:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
14:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:16/0 = 0
15:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:16/0 = 0
17:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
17:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:16/0 = 0
18:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
18:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:16/0 = 0
19:16/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
19:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:17/0 = 0
1:17/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:17/0 = 0
2:17/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
2:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:17/0 = 0
4:17/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
4:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:17/0 = 0
5:17/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
5:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:17/0 = 0
11:17/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:17/0 = 0
14:17/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
14:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:17/0 = 0
15:17/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:18/0 = 0
1:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:18/0 = 0
2:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
2:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:18/0 = 0
4:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
4:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:18/0 = 0
5:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
5:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:18/0 = 0
10:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
10:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:18/0 = 0
11:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:18/0 = 0
12:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
12:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:18/0 = 0
14:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
14:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:18/0 = 0
15:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:18/0 = 0
17:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
17:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:18/0 = 0
19:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
19:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:18/0 = 0
21:18/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
21:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:20/0 = 0
1:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:20/0 = 0
9:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
9:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:20/0 = 0
10:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
10:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:20/0 = 0
11:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:20/0 = 0
13:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
13:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:20/0 = 0
14:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
14:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:20/0 = 0
15:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:20/0 = 0
17:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
17:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:21/0 = 0
9:21/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
9:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:21/0 = 0
10:21/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
10:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:21/0 = 0
11:21/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:21/0 = 0
13:21/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
13:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:21/0 = 0
14:21/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
14:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:21/0 = 0
15:21/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
15:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/size_in_atlas = Vector2i(2, 2)
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.9706, -16.617, 16.617, -16.9706, 16.617, 17.3241, 0, 1.41421)
13:1/size_in_atlas = Vector2i(2, 2)
13:1/0 = 0
13:1/0/texture_origin = Vector2i(-8, -8)
13:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 24.0416, -7.77817, 24.0416, 8.92722, 24.3952, 24.13, -8.13173, 23.9532)
16:1/size_in_atlas = Vector2i(2, 2)
16:1/0 = 0
16:1/0/texture_origin = Vector2i(-8, -8)
16:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
16:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 24.13, 7.68979, 23.9532, 9.72272, 24.0416, 24.2184, -7.95495, 24.572)
14:4/size_in_atlas = Vector2i(1, 2)
14:4/0 = 0
14:4/0/texture_origin = Vector2i(-8, -8)
14:4/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.0883884, 8, 16.0867, -7.95495, 15.9099, 8.39689, 16.1751, 14.7609, 16.3518, 24.2184, -0.176777, 24.13)
19:1/size_in_atlas = Vector2i(2, 2)
19:1/0 = 0
19:1/0/texture_origin = Vector2i(-8, -8)
19:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 24.0416, -8.13173, 23.9532, 9.72272, 24.0416, 24.2184, -7.95495, 24.572)
22:1/size_in_atlas = Vector2i(2, 2)
22:1/0 = 0
22:1/0/texture_origin = Vector2i(-8, -8)
22:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
22:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 24.13, 7.68979, 23.9532, 9.72272, 24.0416, 24.2184, -7.95495, 24.572)
16:4/size_in_atlas = Vector2i(1, 2)
16:4/0 = 0
16:4/0/texture_origin = Vector2i(-8, -8)
16:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.0625, -8, 16.0625, 7.6875, 15.9375, 23.9375, 0.1875, 24.3125)
20:4/size_in_atlas = Vector2i(1, 2)
20:4/0 = 0
20:4/0/texture_origin = Vector2i(-8, -8)
20:4/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
20:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.353554, 8, 16.1751, -8.13173, 16.0867, 24.3068, 0.0883884, 24.0416)
4:10/size_in_atlas = Vector2i(2, 2)
4:10/0 = 0
4:10/0/texture_origin = Vector2i(-8, -8)
4:10/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 24.0416, -7.77817, 24.0416, -0.972272, -8.13173, 24.0416)
7:5/size_in_atlas = Vector2i(3, 1)
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24.375, -8.375, 24, -8.125, 24, 8.25, -24.25, 8.125)
7:3/size_in_atlas = Vector2i(2, 1)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.75, -8.625, 16.25, -8.375, 16, 8.125, -16.375, 8.5)
11:13/size_in_atlas = Vector2i(1, 2)
11:13/0 = 0
11:13/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
11:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.01561, -16.2635, 8.48528, -16.2635, 8.48528, 15.7331, -8.13173, 16.2635)
3:20/size_in_atlas = Vector2i(2, 2)
3:20/0 = 0
3:20/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
3:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.0867, -15.9099, 16.2635, -16.0867, 15.7331, 16.0867, -16.2635, 16.2635)
7:13/size_in_atlas = Vector2i(1, 2)
7:13/0 = 0
7:13/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.95495, -16.2635, 8.3085, -16.0867, 8.83884, 16.4402, -8.66206, 16.9706)
9:13/size_in_atlas = Vector2i(1, 3)
9:13/0 = 0
9:13/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.77818, -24.0416, 7.95495, -24.3952, 8.30851, 24.9255, -8.13173, 25.1023)
10:3/size_in_atlas = Vector2i(2, 1)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.75, -8.625, 16.25, -8.375, 16, 8.125, -16.375, 8.5)
9:1/size_in_atlas = Vector2i(3, 1)
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24.375, -8.375, 24, -8.125, 24, 8.25, -24.25, 8.125)
1:16/0 = 0
4:14/0 = 0
22:4/size_in_atlas = Vector2i(1, 2)
22:4/0 = 0
22:4/0/physics_layer_0/linear_velocity = Vector2(-0.035, 0)
22:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.13173, -14.7609, 8, 0.441941, 8, 8, 7.77817, 16.7054, 7.68979, 16.617, -7.86656, 16.617)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y3d3k"]
texture = ExtResource("3_pgtnn")
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:10/0 = 0
21:10/0 = 0
5:12/0 = 0
7:12/0 = 0
11:12/0 = 0
13:12/0 = 0
7:2/size_in_atlas = Vector2i(8, 6)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/size_in_atlas = Vector2i(7, 7)
19:1/0 = 0
15:6/size_in_atlas = Vector2i(3, 2)
15:6/0 = 0
13:9/size_in_atlas = Vector2i(2, 2)
13:9/0 = 0
1:11/size_in_atlas = Vector2i(2, 2)
1:11/0 = 0
16:9/size_in_atlas = Vector2i(2, 2)
16:9/0 = 0
16:12/size_in_atlas = Vector2i(2, 1)
16:12/0 = 0
23:9/size_in_atlas = Vector2i(2, 2)
23:9/0 = 0
20:11/size_in_atlas = Vector2i(2, 1)
20:11/0 = 0
1:7/size_in_atlas = Vector2i(2, 1)
1:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ggn7w"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_juwd7")
sources/1 = SubResource("TileSetAtlasSource_y3d3k")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6nd0k"]
texture = ExtResource("4_763a0")
0:0/0 = 0
0:0/0/custom_data_0 = "cherry"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ty3g6"]
texture = ExtResource("5_udy2u")
0:0/0 = 0
0:0/0/custom_data_0 = "gem"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8o321"]
texture = ExtResource("3_pgtnn")
0:3/size_in_atlas = Vector2i(3, 3)
0:3/0 = 0
0:3/0/custom_data_0 = "door"

[sub_resource type="TileSet" id="TileSet_xb1kg"]
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/2 = SubResource("TileSetAtlasSource_6nd0k")
sources/3 = SubResource("TileSetAtlasSource_ty3g6")
sources/4 = SubResource("TileSetAtlasSource_8o321")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7dppv"]
texture = ExtResource("3_pgtnn")
9:10/0 = 0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:10/0/custom_data_0 = "spikes"
9:12/0 = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:12/0/custom_data_0 = "spikes"

[sub_resource type="TileSet" id="TileSet_0cm21"]
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_7dppv")

[node name="LevelBase" type="Node2D"]
script = ExtResource("1_58ikm")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Clouds"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_7n2a6")
centered = false

[node name="Forest" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Forest"]
position = Vector2(-2, 134)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_kpngl")
centered = false
region_enabled = true
region_rect = Rect2(880, 0, 880, 368)

[node name="TML_World" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_ggn7w")

[node name="TML_Items" type="TileMapLayer" parent="."]
visible = false
tile_set = SubResource("TileSet_xb1kg")

[node name="TML_Danger" type="TileMapLayer" parent="." groups=["danger"]]
tile_set = SubResource("TileSet_0cm21")

[node name="Player" parent="." instance=ExtResource("6_ovct1")]

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("7_tn277")]

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_taw8n")

[connection signal="score_changed" from="." to="CanvasLayer/HUD" method="update_score"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="life_changed" from="Player" to="CanvasLayer/HUD" method="update_life"]
